--- a/layout/DEBIAN/control
+++ b/layout/DEBIAN/control
@@ -1,8 +1,8 @@
 Package: com.sticktron.ahahah
 Name: Ah! Ah! Ah!
-Depends: mobilesubstrate, firmware (>= 7.0)
-Version: 1.1.3
+Version: 1.1.4
 Architecture: iphoneos-arm
+Depends: firmware (>= 7.0), mobilesubstrate, preferenceloader
 Description: A Customizable Unlock Error Alarm, inspired by Jurassic Park.
 Maintainer: Sticktron
 Author: Sticktron
