--- a/Prefs/Makefile
+++ b/Prefs/Makefile
@@ -1,4 +1,4 @@
-ARCHS = armv7 armv7s arm64
+ARCHS = armv7 arm64
 TARGET = iphone:clang:latest:7.0
 
 THEOS_BUILD_DIR = Packages
@@ -9,7 +9,7 @@ BUNDLE_NAME = AhAhAhPrefs
 AhAhAhPrefs_CFLAGS = -fobjc-arc
 AhAhAhPrefs_FILES = AhAhAhPrefs.m
 AhAhAhPrefs_INSTALL_PATH = /Library/PreferenceBundles
-AhAhAhPrefs_FRAMEWORKS = Foundation UIKit MobileCoreServices AssetsLibrary CoreGraphics CoreMedia AVFoundation LocalAuthentication Social
+AhAhAhPrefs_FRAMEWORKS = UIKit MobileCoreServices AssetsLibrary CoreGraphics CoreMedia AVFoundation LocalAuthentication Social
 AhAhAhPrefs_PRIVATE_FRAMEWORKS = Preferences
 
 include $(THEOS_MAKE_PATH)/bundle.mk
