--- a/layout/DEBIAN/control
+++ b/layout/DEBIAN/control
@@ -5,5 +5,6 @@ Architecture: iphoneos-arm
 Depends: firmware (>= 7.0), mobilesubstrate, preferenceloader
 Description: A customizable unlock error alarm inspired by Jurassic Park.
 Author: Sticktron <sticktron@hotmail.com>
+Maintainer: Sticktron
 Icon: file:///Library/PreferenceBundles/AhAhAhPrefs.bundle/Icon.png
 Section: Tweaks
